--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             </div>
 
                             <div class="rayita-invertida">
-                                <img src="../img/line-vertical.svg" alt="">
+                                <img src="./img/line-vertical.svg" alt="">
                             </div>
 
                             <div class="info-2">
@@ -60,26 +60,26 @@
                     </div>
 
                     <div class="image-1">
-                            <img src="../img/img-large-1.jpeg" alt="">
+                            <img src="./img/img-large-1.jpeg" alt="">
                             <div class="border"></div>
                     </div>
             </section>
 
             <section class="list">
                     <div class="img-list">
-                        <img src="../img/ajaib-img.png" alt="">
+                        <img src="./img/ajaib-img.png" alt="">
                     </div>
                     <div class="img-list">
-                        <img src="../img/Stockbit-img.png" alt="">
+                        <img src="./img/Stockbit-img.png" alt="">
                     </div>
                     <div class="img-list">
-                        <img src="../img/bibit-img.png" alt="">
+                        <img src="./img/bibit-img.png" alt="">
                     </div>
                     <div class="img-list">
-                        <img src="../img/ipot-img.png" alt="">
+                        <img src="./img/ipot-img.png" alt="">
                     </div>
                     <div class="img-list">
-                        <img src="../img/tananduit-img.png" alt="">
+                        <img src="./img/tananduit-img.png" alt="">
                     </div>
             </section>
 
@@ -97,7 +97,7 @@
                 <section class="box-1">
                     <div class="section-1-box-1">
                         <div class="section-img">
-                            <img src="../img/img-large-2.jfif" alt="">
+                            <img src="./img/img-large-2.jfif" alt="">
                         </div>
                     </div>
 
@@ -122,14 +122,14 @@
                             </div>
                         </div>
                         <div class="box-2-icon-2">
-                            <img src="../icons/chevron-right.svg" alt="">
+                            <img src="./icons/chevron-right.svg" alt="">
                         </div>
                     </div>
 
                     <div class="box-2-button-2">
                         <div class="box-2-container">
                             <div class="box-2-icon-3">
-                                <img src="../icons/escudo.png" alt="">
+                                <img src="./icons/escudo.png" alt="">
                             </div>
 
                             <div class="box-2-p-2">
@@ -138,7 +138,7 @@
                         </div>
 
                         <div class="box-2-icon-4">
-                            <img src="../icons/chevron-right.svg" alt="">
+                            <img src="./icons/chevron-right.svg" alt="">
                         </div>
                     </div>
 
@@ -149,7 +149,7 @@
                             </div>
 
                             <div class="box-3-icon-2">
-                                <img src="../icons/chevron-down.svg" alt="">
+                                <img src="./icons/chevron-down.svg" alt="">
                             </div>
                         </div>
 
@@ -170,7 +170,7 @@
             <section class="section-2">
 
                 <div class="section-2-img">
-                    <img src="../img/img-large-3.jfif" alt="">
+                    <img src="./img/img-large-3.jfif" alt="">
                     <span class="border"></span>
 
                     <div class="box-img">
@@ -265,7 +265,7 @@
                     <hr>
 
                     <div class="data">
-                        <div class="data-img"> <img src="../img/person_1.jpg" alt=""> </div>
+                        <div class="data-img"> <img src="./img/person_1.jpg" alt=""> </div>
                         <div class="data-text">
                             <div class="data-name-text"> <b>Raymond Stuart</b> </div>
                             <div class="data-profession-text">Tech Enthusiost</div>
@@ -281,7 +281,7 @@
                     <hr>
 
                     <div class="data">
-                        <div class="data-img"> <img src="../img/person_2.jfif" alt=""> </div>
+                        <div class="data-img"> <img src="./img/person_2.jfif" alt=""> </div>
                         <div class="data-text">
                             <div class="data-name-text"> <b>Ronald Tracyt</b> </div>
                             <div class="data-profession-text">CEO Smarturp</div>
@@ -297,7 +297,7 @@
                     <hr>
 
                     <div class="data">
-                        <div class="data-img"> <img src="../img/person_3.jfif" alt=""> </div>
+                        <div class="data-img"> <img src="./img/person_3.jfif" alt=""> </div>
                         <div class="data-text">
                             <div class="data-name-text"> <b>David Ludwing</b> </div>
                             <div class="data-profession-text">Investor</div>
@@ -316,7 +316,7 @@
                     <hr>
 
                     <div class="data">
-                        <div class="data-img"> <img src="../img/person_4.jfif" alt=""> </div>
+                        <div class="data-img"> <img src="./img/person_4.jfif" alt=""> </div>
                         <div class="data-text">
                             <div class="data-name-text"> <b>Chloe Grace</b> </div>
                             <div class="data-profession-text">Actress</div>
