feat: Add file index.js and add graphic

--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
                 </section>
 
                 <section class="graphic">
-
+                    <div class="box-float"></div>
+                    <div class="line_graphic"  id="myPlot"></div>
                 </section>
 
             </section>
@@ -373,5 +374,7 @@
 
     </div>
 
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script src="./index.js"></script>
 </body>
 </html>
